--- a/katrid/theme/less/style/menu.less
+++ b/katrid/theme/less/style/menu.less
@@ -1,6 +1,23 @@
 
+#left-menu .user-profile-menu {
+  width: 100%;
+  position: absolute;
+  left: 0;
+  opacity: .8;
+  border: none;
+  padding: 5px;
+  color: #3c3c3c;
+  bottom: 0;
+  cursor: pointer;
+  background-color: #bababa;
+}
+
 .dropdown-menu > li > a {
   padding: 7px 17px;
   margin: 0 3px;
   border-radius: @border-radius-base;
+}
+
+#left-menu .menu-item > a {
+  font-size: 14px;
 }
