--- a/katrid/templates/page.html
+++ b/katrid/templates/page.html
@@ -10,7 +10,7 @@
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,400italic,600,700" rel="stylesheet" type="text/css">
 
-  <title>Theme Template for Bootstrap</title>
+  <title>Katrid Theme Template for Bootstrap</title>
 
   <!-- extra head -->
   {% block extra_head %}{% endblock %}
@@ -49,7 +49,9 @@
 </head>
 
 <body class="{% block body_class %}{% endblock %}">
+<div id="page-content">
 {% block page %}{% endblock %}
+</div>
 
 <!-- Bootstrap core JavaScript
 ================================================== -->
