--- a/katrid/theme/less/style/common.less
+++ b/katrid/theme/less/style/common.less
@@ -56,12 +56,19 @@ strong {
   font-weight: 600;
 }
 
+#page-content {
+  overflow: hidden;
+  min-height: 100%;
+  min-width: 290px;
+}
+
 
 #main-content {
   margin-left: 220px;
   background-repeat: repeat;
   background-color: #f3f5f8;
   border-left: 1px solid #d5d6d8;
+  min-width: 290px;
   min-height: 100%;
   padding-bottom: 50px;
   position: relative;
