--- a/katrid/theme/less/style/menu.less
+++ b/katrid/theme/less/style/menu.less
@@ -25,3 +25,23 @@
     font-size: 12px;
   }
 }
+
+@media (max-width: 767px) {
+  .navbar-nav .open .dropdown-menu.dropdown-notifications-menu {
+    position: absolute;
+    float: left;
+    min-width: 160px;
+    left: auto;
+    right: 0;
+    background-color: #ffffff;
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    background-clip: padding-box;
+    -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+
+    & > li > a {
+      padding: 7px 17px;
+      color: @text-color;
+    }
+  }
+}
