--- a/katrid/templates/crm.html
+++ b/katrid/templates/crm.html
@@ -3,7 +3,7 @@
   <div class="panel page-heading">
     <h2>Sales Opportunities <i class="pe pe-fw pe-7s-rocket"></i></h2>
     <p class="help-block">
-      <strong>Drag and drop</strong> opportunities panels between gourps.
+      <strong>Drag and drop</strong> opportunities cards between gourps.
     </p>
     <ol class="breadcrumb">
       <li>
